# deep-reservoir

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  combine_results.py  pyproject.toml  requirements.txt  space.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: comparison.md  fastapi.md
inputs/: countries.csv  policies.csv
results/: combined_results.csv  example_output.csv  gpt-4-1.csv  gpt-4o-mini-2-pass.csv  output.csv  sonar-pro-1.csv  sonar-pro-2.csv
results/dumps/: Brunei-31-1755743718  Brunei-32-1755743723  Brunei-33-1755743730  Brunei-34-1755743736  Brunei-35-1755743740  Brunei-36-1755743743  Brunei-37-1755743747  Brunei-38-1755743752  Brunei-39-1755743756  Brunei-40-1755743760  Cambodia-71-1755743904  Cambodia-72-1755743908  Cambodia-73-1755743921  Cambodia-74-1755743927  Cambodia-75-1755743934  Cambodia-76-1755743938  Cambodia-77-1755743942  Cambodia-78-1755743945  Cambodia-79-1755743949  Cambodia-80-1755743953  Indonesia-0-1755676906  Indonesia-1-1755743560  Indonesia-1-1755913506  Indonesia-1-1755913547  Indonesia-1-1756269094  Indonesia-1-1756355645  Indonesia-10-1755743609  Indonesia-2-1755743565  Indonesia-2-1755913554  Indonesia-2-1756269104  Indonesia-3-1755743570  Indonesia-3-1755913560  Indonesia-3-1756269114  Indonesia-4-1755743575  Indonesia-5-1755743581  Indonesia-6-1755743586  Indonesia-7-1755743591  Indonesia-8-1755743600  Indonesia-9-1755743604  Laos-21-1755743669  (+69 more)
src/api/: __init__.py
src/batch/: __init__.py
src/deep_reservoir/: __init__.py  result.py  server.py
(+307 files in other folders)
