[project]
name = "deep-reservoir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stevenhuyn" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.100.2",
]

[project.scripts]
deep-reservoir = "deep_reservoir:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
